change tile hover opacity

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
-								<article>
+								<article onclick="window.open('https://yihwan.github.io/drum-circle/')">
 									<span class="image">
 										<img src="images/drum-circle.png" alt="drum circle" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Drum Circle</a></h3>
-										<p>For late-night keyboard jam sessions.</p>
+										<h3>Drum Circle</h3>
+										<p>For late-night keyboard jam sessions</p>
 										<br>
-										<p>For late-night keyboard jam sessions.</p>
+										<p>Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
 									</header>
 								</article>
 								<!-- <article>
