minor styling changes

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 									</span>
 									<header class="major">
 										<h3>Drum Circle</h3>
-										<p>For late-night keyboard jam sessions</p>
+										<p class="tagline">For late-night keyboard jam sessions</p>
 										<br>
-										<p>Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
+										<p class="details">Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
 									</header>
 								</article>
 								<!-- <article>
