--- a/index.html
+++ b/index.html
@@ -56,16 +56,20 @@
 										<p class="details">Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
 									</header>
 								</article>
-								<!-- <article>
+
+								<article onclick="window.open('https://yihwan.github.io/fireworks/')">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/fireworks.png" alt="fireworks" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3>Fireworks</h3>
+										<p class="tagline">Do you ever feel ...</p>
+										<br>
+										<p class="details">HTML5 Canvas, animations, JavaScript prototyping. Guided by Airbrake.</p>
 									</header>
 								</article>
-								<article>
+
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
@@ -73,8 +77,9 @@
 										<h3><a href="landing.html" class="link">Magna</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
-								</article>
-								<article>
+								</article> -->
+
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -100,8 +105,8 @@
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article> -->
-							</section>
+								</article>
+							</section> -->
 
 					</div>
 
