--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
+
+								<!-- <article onclick="window.open('https://yihwan.github.io/drum-circle/')">
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3>Drum Circle</h3>
+										<p class="tagline">For late-night keyboard jam sessions</p>
+										<br>
+										<p class="details">Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article> -->
+
+								<article onclick="window.open('https://yihwan.github.io/metro-clock/')">
+									<span class="image">
+										<img src="images/metro-clock.png" alt="metro-clock" />
+									</span>
+									<header class="major">
+										<h3>Metro Clock</h3>
+										<p class="tagline">Inspired by the Copenhagen Metro</p>
+										<br>
+										<p class="details">Element.style.transform, CSS positioning. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
+
 								<article onclick="window.open('https://yihwan.github.io/drum-circle/')">
 									<span class="image">
 										<img src="images/drum-circle.png" alt="drum circle" />
@@ -69,45 +94,7 @@
 									</header>
 								</article>
 
-								<!-- <article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
-									</header>
-								</article> -->
-
-								<!-- <article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
-									</header>
-								</article>
-							</section> -->
-
+							</section>
 					</div>
 
 				<!-- Footer -->
