--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 									</header>
 								</article> -->
 
+								<article onclick="window.open('https://yihwan.github.io/eye-see/')">
+									<span class="image">
+										<img src="images/eye-see.png" alt="eye-see" />
+									</span>
+									<header class="major">
+										<h3>Eye See</h3>
+										<p class="tagline">I can see clearly now ...</p>
+										<br>
+										<p class="details">CSS3 variables, HTML5 data attributes, style.setProperty. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
+
 								<article onclick="window.open('https://yihwan.github.io/metro-clock/')">
 									<span class="image">
 										<img src="images/metro-clock.png" alt="metro-clock" />
