update syntax consistency

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										<h3>Metro Clock</h3>
 										<p class="tagline">Inspired by the Copenhagen Metro</p>
 										<br>
-										<p class="details">Element.style.transform, CSS positioning. Guided by Wes' JavaScript 30.</p>
+										<p class="details">CSS positioning, style.transform. Guided by Wes' JavaScript 30.</p>
 									</header>
 								</article>
 
