--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/yihwan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://linkedin.com/in/yihwan" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li>or email me at hi@yihwan.kim</li>
+								<li>or email me at <a href="mailto:hi@yihwan.kim">hi@yihwan.kim</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>2018 &copy; Yihwan Kim</li>
