--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 									</header>
 								</article> -->
 
+								<article onclick="window.open('https://yihwan.github.io/places-ive-lived/')">
+									<span class="image">
+										<img src="images/places-ive-lived.png" alt="" />
+									</span>
+									<header class="major">
+										<h3>Places I've Lived</h3>
+										<p class="tagline">Around the world and back</p>
+										<br>
+										<p class="details">CSS Flexbox, event-based transitions. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
+
 								<article onclick="window.open('https://yihwan.github.io/eye-see/')">
 									<span class="image">
 										<img src="images/eye-see.png" alt="eye-see" />
