--- a/index.html
+++ b/index.html
@@ -58,9 +58,21 @@
 									</header>
 								</article> -->
 
+								<article onclick="window.open('https://yihwan.github.io/city-lookup/')">
+									<span class="image">
+										<img src="images/city-lookup.png" alt="city-lookup" />
+									</span>
+									<header class="major">
+										<h3>City Lookup</h3>
+										<p class="tagline">How many people live here?</p>
+										<br>
+										<p class="details">Fetch API, RegExp, promises. Design inspired by the CVS receipt. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
+
 								<article onclick="window.open('https://yihwan.github.io/places-ive-lived/')">
 									<span class="image">
-										<img src="images/places-ive-lived.png" alt="" />
+										<img src="images/places-ive-lived.png" alt="places-ive-liced" />
 									</span>
 									<header class="major">
 										<h3>Places I've Lived</h3>
