--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<link rel="shortcut icon" type="image/png" href="images/js-favicon.png"/>
-		
+
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119690274-1"></script>
 		<script>
@@ -67,6 +67,18 @@
 										<p class="details">Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
 									</header>
 								</article> -->
+
+								<article onclick="window.open('https://yihwan.github.io/paintbrush/')">
+									<span class="image">
+										<img src="images/paintbrush.png" alt="" />
+									</span>
+									<header class="major">
+										<h3>Paintbrush</h3>
+										<p class="tagline">With all the colors of the canvas</p>
+										<br>
+										<p class="details">HTML5 canvas, HSL/HSV, one-time events. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
 
 								<article onclick="window.open('https://yihwan.github.io/city-lookup/')">
 									<span class="image">
