--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
 									</header>
 								</article> -->
 
+								<article onclick="window.open('https://yihwan.github.io/todo-list/')">
+									<span class="image">
+										<img src="images/todo-list.png" alt="todo-list" />
+									</span>
+									<header class="major">
+										<h3>Todo List</h3>
+										<p class="tagline">Check, check, shift-check for multi-check</p>
+										<br>
+										<p class="details">Adding/removing DOM elements, element multi-select. HTML/CSS skeleton provided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
+
 								<article onclick="window.open('https://yihwan.github.io/paintbrush/')">
 									<span class="image">
 										<img src="images/paintbrush.png" alt="" />
