minor wording changes, todo-list

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 									</span>
 									<header class="major">
 										<h3>Todo List</h3>
-										<p class="tagline">Check, check, shift-check for multi-check</p>
+										<p class="tagline">Check, check, shift-check for multi-select</p>
 										<br>
-										<p class="details">Adding/removing DOM elements, element multi-select. HTML/CSS skeleton provided by Wes' JavaScript 30.</p>
+										<p class="details">Adding/removing DOM elements, element multi-selection. HTML/CSS skeleton provided by Wes' JavaScript 30.</p>
 									</header>
 								</article>
 
