--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+images<!DOCTYPE HTML>
 <!--
 	Forty by Pixelarity
 	pixelarity.com | hello@pixelarity.com
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<link rel="shortcut icon" type="image/png" href="images/js-favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="assets/images/js-favicon.png"/>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119690274-1"></script>
@@ -58,7 +58,7 @@
 
 								<!-- <article onclick="window.open('https://yihwan.github.io/drum-circle/')">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="assets/images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3>Drum Circle</h3>
@@ -68,9 +68,21 @@
 									</header>
 								</article> -->
 
+								<article onclick="window.open('http://cachemonetreloaded.com')">
+									<span class="image">
+										<img src="assets/images/cachemonet-reloaded.png" alt="cachemonet-reloaded" />
+									</span>
+									<header class="major">
+										<h3>Cachemonet Reloaded</h3>
+										<p class="tagline">Celebrating 5 years of weird</p>
+										<br>
+										<p class="details">An homage to the classic, reloaded with everything that's newly retro and more.</p>
+									</header>
+								</article>
+
 								<article onclick="window.open('https://yihwan.github.io/todo-list/')">
 									<span class="image">
-										<img src="images/todo-list.png" alt="todo-list" />
+										<img src="assets/images/todo-list.png" alt="todo-list" />
 									</span>
 									<header class="major">
 										<h3>Todo List</h3>
@@ -82,7 +94,7 @@
 
 								<article onclick="window.open('https://yihwan.github.io/paintbrush/')">
 									<span class="image">
-										<img src="images/paintbrush.png" alt="" />
+										<img src="assets/images/paintbrush.png" alt="" />
 									</span>
 									<header class="major">
 										<h3>Paintbrush</h3>
@@ -94,7 +106,7 @@
 
 								<article onclick="window.open('https://yihwan.github.io/city-lookup/')">
 									<span class="image">
-										<img src="images/city-lookup.png" alt="city-lookup" />
+										<img src="assets/images/city-lookup.png" alt="city-lookup" />
 									</span>
 									<header class="major">
 										<h3>City Lookup</h3>
@@ -106,7 +118,7 @@
 
 								<article onclick="window.open('https://yihwan.github.io/places-ive-lived/')">
 									<span class="image">
-										<img src="images/places-ive-lived.png" alt="places-ive-liced" />
+										<img src="assets/images/places-ive-lived.png" alt="places-ive-liced" />
 									</span>
 									<header class="major">
 										<h3>Places I've Lived</h3>
@@ -118,7 +130,7 @@
 
 								<article onclick="window.open('https://yihwan.github.io/eye-see/')">
 									<span class="image">
-										<img src="images/eye-see.png" alt="eye-see" />
+										<img src="assets/images/eye-see.png" alt="eye-see" />
 									</span>
 									<header class="major">
 										<h3>Eye See</h3>
@@ -130,7 +142,7 @@
 
 								<article onclick="window.open('https://yihwan.github.io/metro-clock/')">
 									<span class="image">
-										<img src="images/metro-clock.png" alt="metro-clock" />
+										<img src="assets/images/metro-clock.png" alt="metro-clock" />
 									</span>
 									<header class="major">
 										<h3>Metro Clock</h3>
@@ -142,7 +154,7 @@
 
 								<article onclick="window.open('https://yihwan.github.io/drum-circle/')">
 									<span class="image">
-										<img src="images/drum-circle.png" alt="drum circle" />
+										<img src="assets/images/drum-circle.png" alt="drum circle" />
 									</span>
 									<header class="major">
 										<h3>Drum Circle</h3>
@@ -154,7 +166,7 @@
 
 								<article onclick="window.open('https://yihwan.github.io/fireworks/')">
 									<span class="image">
-										<img src="images/fireworks.png" alt="fireworks" />
+										<img src="assets/images//fireworks.png" alt="fireworks" />
 									</span>
 									<header class="major">
 										<h3>Fireworks</h3>
