ucreate featured section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,28 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one" class="tiles">
+							<section id="one" class="spotlights">
+								<section>
+									<a target="_blank" href="http://cachemonetreloaded.com" class="image">
+										<img src="assets/images/cachemonet-reloaded.gif" alt="cachemonet-reloaded" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Cachemonet Reloaded</h3>
+											</header>
+											<p>An homage to the classic <a target="_blank" href="http://cachemonet.com">#cachemonet</a> to celebrate 5 years of weird since its initial release. Reloaded with everything that's newly retro and more.</p>
+											<ul class="actions">
+												<li><a target="_blank" href="http://cachemonetreloaded.com" class="button">Check it out</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+							</section>
+
+
+						<!-- Two -->
+							<section id="two" class="tiles">
 
 								<!-- <article onclick="window.open('https://yihwan.github.io/drum-circle/')">
 									<span class="image">
@@ -67,18 +88,6 @@
 										<p class="details">Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
 									</header>
 								</article> -->
-
-								<article onclick="window.open('http://cachemonetreloaded.com')">
-									<span class="image">
-										<img src="assets/images/cachemonet-reloaded.png" alt="cachemonet-reloaded" />
-									</span>
-									<header class="major">
-										<h3>Cachemonet Reloaded</h3>
-										<p class="tagline">Celebrating 5 years of weird</p>
-										<br>
-										<p class="details">An homage to the classic, reloaded with everything that's newly retro and more.</p>
-									</header>
-								</article>
 
 								<article onclick="window.open('https://yihwan.github.io/todo-list/')">
 									<span class="image">
