--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<section id="one" class="spotlights">
 								<section>
 									<a target="_blank" href="http://cachemonetreloaded.com" class="image">
-										<img src="assets/images/cachemonet-reloaded.gif" alt="cachemonet-reloaded" />
+										<!-- <img src="assets/images/cachemonet-reloaded.gif" alt="cachemonet-reloaded" /> -->
 									</a>
 									<div class="content">
 										<div class="inner">
