--- a/index.html
+++ b/index.html
@@ -89,18 +89,6 @@
 									</header>
 								</article> -->
 
-								<!-- <article onclick="window.open('https://yihwan.github.io/drum-circle/')">
-									<span class="image">
-										<img src="assets/images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3>Drum Circle</h3>
-										<p class="tagline">For late-night keyboard jam sessions</p>
-										<br>
-										<p class="details">Event handling, querySelectors, classLists, kbd/audio tags. Guided by Wes' JavaScript 30.</p>
-									</header>
-								</article> -->
-								
 								<article onclick="window.open('https://yihwan.github.io/talk-to-me/')">
 									<span class="image">
 										<img src="assets/images/talk-to-me.png" alt="todo-list" />
@@ -110,6 +98,18 @@
 										<p class="tagline">With cool accents too</p>
 										<br>
 										<p class="details">Web Speech API. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
+
+								<article onclick="window.open('https://yihwan.github.io/todo-list/')">
+									<span class="image">
+										<img src="assets/images/todo-list.png" alt="todo-list" />
+									</span>
+									<header class="major">
+										<h3>Todo List</h3>
+										<p class="tagline">Check, check, shift-check for multi-select.</p>
+										<br>
+										<p class="details">Adding/removing DOM elements, element multi-select. HTML/CSS skeleton provided by Wes' JavaScript 30.</p>
 									</header>
 								</article>
 
