--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
 									</header>
 								</article> -->
 
+								<article onclick="window.open('https://yihwan.github.io/tv-konami-codes/')">
+									<span class="image">
+										<img src="assets/images/tv-konami-codes.png" alt="tv-konami-codes" />
+									</span>
+									<header class="major">
+										<h3>TV Konami Codes</h3>
+										<p class="tagline">Can you guess my favorite TV shows?</p>
+										<br>
+										<p class="details">Key sequence detection. Guided by Wes' JavaScript 30.</p>
+									</header>
+								</article>
+
 								<article onclick="window.open('https://yihwan.github.io/talk-to-me/')">
 									<span class="image">
 										<img src="assets/images/talk-to-me.png" alt="todo-list" />
