minor copy changes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									</span>
 									<header class="major">
 										<h3>TV Konami Codes</h3>
-										<p class="tagline">Can you guess my favorite TV shows?</p>
+										<p class="tagline">Can you guess my favorite shows?</p>
 										<br>
 										<p class="details">Key sequence detection. Guided by Wes' JavaScript 30.</p>
 									</header>
